# ufastbootd

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD  README.md  dev-usb-ffs-fastboot.mount  gadget.sh  ufastbootd.service
src/: blocks.c  command.c  constructor.c  defines.h  lib.c  list.h  log.h  variable.c
src/commands/: flash.c  utils.c
ufastbootd/: CMakeLists.txt  debug.c  descriptors.h  fastboot.c  fastboot.h  lib.h  list.c  main.c  sparse.c
ufastbootd/commands/: buffer.c  file.c  reboot.c
